--- a/package.json
+++ b/package.json
@@ -6,18 +6,18 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.15.2",
-    "cheerio" : "~0.22.0",
+    "body-parser": "^1.18.3",
+    "cheerio": "~0.22.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
-    "express": "~4.14.0",
+    "express": "^4.16.3",
     "js-yaml": "^3.6.1",
-    "morgan": "~1.7.0",
+    "morgan": "^1.9.0",
     "multer": "^1.2.0",
     "node-exiftool": "^2.0.0",
     "pug": "^2.0.0-beta6",
     "randomstring": "^1.1.5",
-    "request" : "~2.79.0",
-    "serve-favicon": "~2.3.0"
+    "request": "^2.88.0",
+    "serve-favicon": "^2.5.0"
   }
 }
