--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "body-parser": "^1.18.3",
     "cheerio": "~0.22.0",
     "cookie-parser": "~1.4.3",
-    "debug": "~2.2.0",
+    "debug": "^3.1.0",
     "express": "^4.16.3",
     "js-yaml": "^3.6.1",
     "morgan": "^1.9.0",
